--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@ button {
     border-radius: 4px;
    
 }
+
+
  
 .current {
     color:var(--accent-color);
@@ -85,6 +87,8 @@ padding: 94px 0;
     text-decoration: none;
     color: inherit;
 }
+
+
 header {
     border-bottom: 1px solid #ECECEC;
 }
@@ -230,7 +234,7 @@ header .container {
     
 
 }
-.hero-title {
+.hero__title {
     width: 696px;
     margin: 0 auto;
     margin-bottom: 30px;
@@ -479,7 +483,7 @@ background: rgba(47, 48, 58, 0.8);
 }
 /* clients */
 
-.clients-title {
+.clients__title {
  text-align: center;
  margin-bottom: 50px;
 
@@ -490,15 +494,15 @@ letter-spacing: 0.03em;
 color: #212121;
 
 }
-.clients-list {
+.clients__list {
     display: flex;
  
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
 margin-right: 30px;
 
 }
-.clients-item-link {
+.clients__link {
     width: 170px;
     height: 92px;
     display: flex;
@@ -511,12 +515,12 @@ margin-right: 30px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.clients-item-link:hover,
-.clients-item-link:focus {
+.clients__link:hover,
+.clients__link:focus {
     color: var(--accent-color);
 }
 
-.clients-icon {
+.clients__icon {
     width: 106px;
     /* height: 60px; */
     fill: currentColor;
@@ -524,7 +528,7 @@ margin-right: 30px;
 
 
 /* footer */
-.footer-container {
+.footer__container {
     display: flex;
     align-items: baseline;
 }
@@ -533,36 +537,36 @@ margin-right: 30px;
     padding: 60px 0;
     
 }
-.footer-logo {
+.footer__logo {
     color: var(--hero-text-color);
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
     
 }
-.footer-position {
+.footer__position {
     margin-right: 70px;
 }
-.footer-soc-icon {
+.footer-soc__icon {
     width: 20px;
     height: 20px;
     fill: var(--hero-text-color)
 
 }
 
-.footer-soc-text {
+.footer-soc__text {
 margin-bottom: 20px;
 font-weight: 700;
 line-height: 1.14;
 text-transform: uppercase;
 color: var(--hero-text-color);
 }
-.footer-soc-item {
+.footer-soc__item {
 width: 206px;
 height: 44px;
 
 }
-.footer-soc-link {
+.footer-soc__link {
     width: 44px;
     height: 44px;
     color: #AFB1B8;
@@ -578,8 +582,8 @@ height: 44px;
     background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
 
 }
-.footer-soc-link:hover,
-.footer-soc-link:focus {
+.footer-soc__link:hover,
+.footer-soc__link:focus {
     background-color: #2196F3;
     color: var(--hero-text-color);
   
@@ -961,22 +965,22 @@ display: flex;
     font-size: 16px;
     line-height: 1.88;
 }
-.gallery-link {
+.gallery__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
      
 }
-.gallery-link:hover,
-.gallery-link:focus {
+.gallery__link:hover,
+.gallery__link:focus {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.gallery-item {
+.gallery__item {
     position: relative;
     overflow: hidden;
     
 }
-.gallery-description {
+.gallery__description {
     position: absolute;
     left: 0;
     bottom: 0;
@@ -1001,6 +1005,6 @@ background: rgba(33, 150, 243, 0.9);
 transform: translateY(100%);
 transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item:hover .gallery-description {
+.item:hover .gallery__description {
     transform: translateY(0);
 }
