--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -30,11 +30,7 @@ button {
 .current {
     color:var(--accent-color);
 }
-.container {
-    width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-}
+
 .section {
 padding: 94px 0;
 
@@ -47,4 +43,14 @@ padding: 94px 0;
 .link {
     text-decoration: none;
     color: inherit;
+}
+.section__title {
+    margin-bottom: 0;
+    margin-top: 0;
+
+
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
 }
