--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,7 +7,9 @@
 @import './base/reset';
 
 // components
+@import './components/section';
 @import './components/container';
+@import './components/typograhpi';
 @import './components/header';
 @import './components/logo';
 @import './components/main-nav';
@@ -17,6 +19,28 @@
 @import './components/overlay';
 @import './components/hero';
 @import './components/hero-button';
+@import './components/feature';
+@import './components/work';
+@import './components/team';
+@import './components/socials';
+@import './components/team-soc';
+@import './components/clients';
+@import './components/footer';
+@import './components/footer-soc';
+@import './components/footer-newsletter';
+@import './components/Modal-window';
+@import './components/modal-form';
+@import './components/modal-button';
+@import './components/footer-contacts';
+@import './components/portfolio-filter';
+@import './components/portfolio-gallery';
+
+
+
+
+
+
+
 
 
 
