--- a/css/styles.css
+++ b/css/styles.css
@@ -291,7 +291,7 @@ header .container {
     overflow: hidden;
   } */
 /* feature */
-.feature__antenna-icon::before {
+/* .feature__antenna-icon::before {
     display: block;
     content: "";
     height: 120px;
@@ -358,11 +358,11 @@ header .container {
 .feature__text {
     color: var(--primary-text-color);
     line-height: 1.71;
-}
+} */
 
 /* work */
 
-.work {
+/* .work {
     padding-top: 0;
 }
 
@@ -396,9 +396,9 @@ background: rgba(47, 48, 58, 0.8);
     align-items: center;
     justify-content: center;
   
-}
+} */
 /* team*/
-.team-list {
+/* .team-list {
     display: flex;
     list-style: none;
 }
@@ -441,15 +441,15 @@ background: rgba(47, 48, 58, 0.8);
     color: var(--primary-text-color);
     font-size: 16px;
     line-height: 1.19;
-}
-.socials {
+} */
+/* .socials {
     display: flex;
     justify-content: center;
     gap: 10px;
 
     
-}
-.team-soc-link {
+} */
+/* .team-soc-link {
     width: 44px;
     height: 44px;
     color: #AFB1B8;
@@ -478,10 +478,10 @@ background: rgba(47, 48, 58, 0.8);
     height: 20px;
     fill: currentColor;
   
-}
+} */
 /* clients */
 
-.clients__title {
+/* .clients__title {
  text-align: center;
  margin-bottom: 50px;
 
@@ -520,13 +520,12 @@ margin-right: 30px;
 
 .clients__icon {
     width: 106px;
-    /* height: 60px; */
     fill: currentColor;
-}
+} */
 
 
 /* footer */
-.footer__container {
+/* .footer__container {
     display: flex;
     align-items: baseline;
 }
@@ -544,8 +543,8 @@ margin-right: 30px;
 }
 .footer__position {
     margin-right: 70px;
-}
-.footer-soc__icon {
+} */
+/* .footer-soc__icon {
     width: 20px;
     height: 20px;
     fill: var(--hero-text-color)
@@ -585,9 +584,9 @@ height: 44px;
     background-color: #2196F3;
     color: var(--hero-text-color);
   
-}
+} */
 
-.newsletter {
+/* .newsletter {
     margin-left: auto;
     
 }
@@ -637,12 +636,12 @@ margin-bottom: 20px;
 }
 .icon-send {
     margin-left: 12px;
-}
+} */
     
 
 /* Modal window */
 
-.backdrop {
+/* .backdrop {
     position: fixed;
     width: 100%;
     height: 100%;
@@ -700,9 +699,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     width: 100%;
     height: 100%;
 
-}
+} */
 
-.modal-form-text {
+/* .modal-form-text {
 font-weight: 700;
 font-size: 20px;
 line-height: 1.15;
@@ -843,14 +842,14 @@ display: flex;
     min-width: 200px;
     min-height: 50px;
     box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-}
+} */
 
 
 
 
 
 /* contacts */
-.contacts {
+/* .contacts {
     font-style: normal;
     margin-top: 20px;
 }
@@ -877,10 +876,10 @@ display: flex;
 .contacts .link:hover,
 .contacts .link:focus {
     color: var(--accent-color);
-}
+} */
 /* portfolio */
 
-.list-filter {
+/* .list-filter {
     display: flex;
     justify-content: center; 
     margin-bottom: 50px;  
@@ -919,14 +918,14 @@ display: flex;
  background-color: var(--accent-color);
  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 
-}
+} */
 
 
 
 
 
 /* gallery */
-.gallery {
+/* .gallery {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -1005,4 +1004,4 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item:hover .gallery__description {
     transform: translateY(0);
-}
+} */
