--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,7 +15,7 @@
 @import './components/main-nav';
 @import './components/site-nav';
 @import './components/auth-nav';
-@import './components/mail\ end\ tel';
+@import './components/mail-end-tel';
 @import './components/overlay';
 @import './components/hero';
 @import './components/hero-button';
