--- a/sass/components/_portfolio-gallery.scss
+++ b/sass/components/_portfolio-gallery.scss
@@ -2,54 +2,48 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+}
+.gallery .item {
+    width: 370px;
 
-    &.item {
-        width: 370px;
     
-        
-    }
-
-    &.item:nth-child(3n) {
-        margin-right: 0;
-    }
-
-    &.project {
-        padding: 20px 24px;
-        border: 1px solid #EEEEEE;
-    }
-    
-    &.title {
-        margin-bottom: 4px;
-        margin-top: 0;
-    
-    
-        color: var(--title-text-color);
-        font-weight: 700;
-        font-size: 18px;
-        line-height: 2;
-        letter-spacing: 0.06em;
-    }
-    
-    &.text {
-    
-        margin: 0;
-        color: var(--primary-text-color);
-        font-size: 16px;
-        line-height: 1.88;
-    }
+}
+.gallery .item:nth-child(3n) {
+    margin-right: 0;
+}
+.gallery .project {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
 }
 
+
+.gallery .title {
+    margin-bottom: 4px;
+    margin-top: 0;
+
+
+    color: var(--title-text-color);
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+.gallery .text {
+
+    margin: 0;
+    color: var(--primary-text-color);
+    font-size: 16px;
+    line-height: 1.88;
+}
 .gallery__link {
     display: block;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:hover,
-    &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
      
 }
-
+.gallery__link:hover,
+.gallery__link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 
 .gallery__item {
     position: relative;
@@ -83,4 +77,4 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .item:hover .gallery__description {
     transform: translateY(0);
-}
+} 
